Added right base url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://surrealanalysis.com"
+baseurl = "http://kevingreene.github.io/surrealanalysis.com/"
 languageCode = "en-us"
 title = "Surreal Analysis"
 
