--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,7 @@ dependencies:
   pre:
     - bash ./ci-install-hugo.sh
     - go get -v github.com/nathany/s3up
+    - pip install Pygments
   cache_directories:
     - bin
 
