Fixed the domain name

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://kevingreene.github.io/surrealanalysis.com/"
+baseurl = "http://www.surrealanalysis.com"
 languageCode = "en-us"
 title = "Surreal Analysis"
 
