--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://www.surrealanalysis.com"
+baseurl = "http://www.surrealanalysis.com/"
 languageCode = "en-us"
 title = "Surreal Analysis"
 
