--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "Surreal Analysis"
 
 [Params]
-  logo = "/img/infinity.png"
+  logo = "img/infinity.png"
 
 
 [Author]
