--- a/circle.yml
+++ b/circle.yml
@@ -15,6 +15,11 @@ dependencies:
   cache_directories:
     - bin
 
+checkout:
+  post:
+    - git submodule sync
+    - git submodule update --init
+
 test:
   pre:
     - pygmentize -V
