--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,8 @@
 baseurl = "http://www.surrealanalysis.com/"
 languageCode = "en-us"
 title = "Surreal Analysis"
+PygmentsCodeFences= true
+pygmentsstyle = "friendly"
 
 [Params]
   logo = "img/infinity.png"
