Added Google Analytics:

--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 title = "Surreal Analysis"
 PygmentsCodeFences= true
 pygmentsstyle = "friendly"
+googleAnalytics = "UA-50379802-1"
 
 [Params]
   logo = "img/infinity.png"
